--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Mategotchi </title>
-    <link rel="stylesheet" href="../public/css/styles.css">
+    <link rel="stylesheet" href="../public/css/general_styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -122,10 +122,6 @@
         </script>
     <% } %>
 
-    <script type="module" src="resources/js/script.js"></script>
-    <script src="resources/js/script-citas.js"></script>
-    <script src="resources/js/jquery-3.5.1.min.js"></script>
-    <script src="resources/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
 </body>
