--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -8,13 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Mategotchi </title>
     <link rel="stylesheet" href="../public/css/general_styles.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Quicksand:wght@300&family=Staatliches&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&family=Secular+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
