--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Mategotchi </title>
     <link rel="stylesheet" href="../public/css/general_styles.css">
+    <link rel="stylesheet" href="../node_modules/nes.css/css/nes.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Rubik:wght@300&display=swap" rel="stylesheet">
-</head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
+    <!-- minify -->
+    <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
+    <!-- latest -->
+    <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
+    <!-- core style only -->
+    <link href="https://unpkg.com/nes.css/css/nes-core.min.css" rel="stylesheet" />
+    </head>
 
 <body>
 
@@ -39,7 +46,7 @@
     <main class="main_section">
 
         <section id="section_login">
-            <div class="popUp" id="div_login">
+            <div class="popUp nes-container is-rounded" id="div_login">
                 <h2 class="subtitle">Iniciar Sesión</h2>
                 <form action="/auth" id="form_login" method="POST" class="form_index">
                     <label for="email1_usuario">
@@ -54,38 +61,41 @@
                 </form>
             </div>
         
-            <div class="popUp" id="div_registro">
+            <div class="popUp nes-container is-rounded" id="div_registro">
                 <h2 class="subtitle">Registrarse</h2>
                 <form action="/registroUsuario" id="form-registro" method="POST" class="form_index">
                     <label for="nombre_usuario">
                         <span>Nombre(s):</span>
-                        <input type="text" name="nombre_usuario" id="nombre_usuario" required>
+                        <input type="text" name="nombre_usuario" id="nombre_usuario" class="nes-input" required>
                     </label>
                     <label for="apPat_usuario">
                         <span>Apellido paterno:</span>
-                        <input type="text" name="apPat_usuario" id="apPat_usuario" required>
+                        <input type="text" name="apPat_usuario" id="apPat_usuario" class="nes-input" required>
                     </label>
                     <label for="apMat_usuario">
                         <span>Apellido materno:</span>
-                        <input type="text" name="apMat_usuario" id="apMat_usuario" required>
+                        <input type="text" name="apMat_usuario" id="apMat_usuario" class="nes-input" required>
                     </label>
-                    <label for="grado_usuario">
-                        <span>¿En que grado te encuentras?</span>
-                        <select name="grado_usuario" id="grado_usuario" required>
-                            <option value="1ro de primaria">1ro de primaria</option>
-                            <option value="2do de primaria">2do de primaria</option>
-                            <option value="3ro de primaria">3ro de primaria</option>
-                        </select>
-                    </label>
+                    <div class="nes-select">
+                        <label for="grado_usuario">
+                            <span>¿En que grado te encuentras?</span>
+                            <select name="grado_usuario" id="grado_usuario" required>
+                                <option value="1ro de primaria">1ro de primaria</option>
+                                <option value="2do de primaria">2do de primaria</option>
+                                <option value="3ro de primaria">3ro de primaria</option>
+                            </select>
+                        </label>
+                    </div>
+                    
                     <label for="email2_usuario">
                         <span>Correo electronico: </span>
-                        <input type="email" name="email2_usuario" id="email2_usuario" required>
+                        <input type="email" name="email2_usuario" id="email2_usuario" class="nes-input" required>
                     </label>
                     <label for="password2_usuario">
                         <span>Contraseña:</span>
-                        <input type="password" name="password2_usuario" id="password2_usuario" required>
+                        <input type="password" name="password2_usuario" id="password2_usuario" class="nes-input" required>
                     </label>
-                    <button type="submit" id="submit_registro" class="boton">Registrarse</button>
+                    <button type="submit" id="submit_registro" class="nes-btn is-primary">Registrarse</button>
                 </form>
             </div>
         </section>
