--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,12 +31,14 @@
                         <span>MATEGOTCHI</span>
                     </a>
                 </div>
-                <button type="button" id="boton-menu"><em class="fas fa-bars"></em></button>
+                <button type="button" id="boton-menu"><em class="fas fa-bars nes-btn"></em></button>
                 <div id="menu-nav">
                     <ul>
-                        <li><a href="/">Inicio</a></li>
-                        <li><a href="/">¿Quienes somos?</a></li>
-                        <li><a href="/">Contacto</a></li>
+                        <li><a href="/" class="nes-btn is-warning">Inicio</a></li>
+                        <li><a href="/" class="nes-btn">¿Quienes somos?</a></li>
+                        <li><a href="/" class="nes-btn">Contacto</a></li>
+                        <li><a href="/" class="nes-btn" id="login-btn">Iniciar Sesión</a></li>
+                        <li><a href="/" class="nes-btn" id="register-btn">Registrarse</a></li>
                     </ul>
                 </div>
             </nav>
@@ -44,63 +46,66 @@
     </header>
 
     <main class="main_section">
-
-        <section id="section_login">
-            <div class="popUp nes-container is-rounded" id="div_login">
-                <h2 class="subtitle">Iniciar Sesión</h2>
-                <form action="/auth" id="form_login" method="POST" class="form_index">
-                    <label for="email1_usuario">
-                        <span>Correo electronico:</span>
-                        <input type="email" name="email1_usuario" id="email1_usuario" required>
-                    </label>
-                    <label for="password1_usuario">
-                        <span>Password:</span>
-                        <input type="password" name="password1_usuario" id="password1_usuario" required>
-                    </label>
-                    <button type="submit" id="submit_login" class="boton">Ingresar</button>
-                </form>
-            </div>
-        
-            <div class="popUp nes-container is-rounded" id="div_registro">
-                <h2 class="subtitle">Registrarse</h2>
-                <form action="/registroUsuario" id="form-registro" method="POST" class="form_index">
-                    <label for="nombre_usuario">
-                        <span>Nombre(s):</span>
-                        <input type="text" name="nombre_usuario" id="nombre_usuario" class="nes-input" required>
-                    </label>
-                    <label for="apPat_usuario">
-                        <span>Apellido paterno:</span>
-                        <input type="text" name="apPat_usuario" id="apPat_usuario" class="nes-input" required>
-                    </label>
-                    <label for="apMat_usuario">
-                        <span>Apellido materno:</span>
-                        <input type="text" name="apMat_usuario" id="apMat_usuario" class="nes-input" required>
-                    </label>
-                    <div class="nes-select">
-                        <label for="grado_usuario">
-                            <span>¿En que grado te encuentras?</span>
-                            <select name="grado_usuario" id="grado_usuario" required>
-                                <option value="1ro de primaria">1ro de primaria</option>
-                                <option value="2do de primaria">2do de primaria</option>
-                                <option value="3ro de primaria">3ro de primaria</option>
-                            </select>
-                        </label>
-                    </div>
-                    
-                    <label for="email2_usuario">
-                        <span>Correo electronico: </span>
-                        <input type="email" name="email2_usuario" id="email2_usuario" class="nes-input" required>
-                    </label>
-                    <label for="password2_usuario">
-                        <span>Contraseña:</span>
-                        <input type="password" name="password2_usuario" id="password2_usuario" class="nes-input" required>
-                    </label>
-                    <button type="submit" id="submit_registro" class="nes-btn is-primary">Registrarse</button>
-                </form>
-            </div>
+        <h1>¡Bienvenido!</h1>
+        <section>
+            <img src="../public/img/rabbit-gif.gif" alt="">
+            <p>Descubre una nueva y divertida manera de aprender matemáticas.</p>
         </section>
-
     </main>
+
+    <div class="popUp nes-container is-rounded" id="div_login">
+        <button type="button" id="btn-cerrarLogin" class="nes-btn is-error">X</button>
+        <h2 class="subtitle">Iniciar Sesión</h2>
+        <form action="/auth" id="form_login" method="POST" class="form_index">
+            <label for="email1_usuario">
+                <span>Correo electronico:</span>
+                <input type="email" name="email1_usuario" id="email1_usuario" class="nes-input" required>
+            </label>
+            <label for="password1_usuario">
+                <span>Password:</span>
+                <input type="password" name="password1_usuario" id="password1_usuario" class="nes-input" required>
+            </label>
+            <button type="submit" id="submit_login" class="nes-btn is-primary">Ingresar</button>
+        </form>
+    </div>
+
+    <div class="popUp nes-container is-rounded" id="div_registro">
+        <button type="button" id="btn-cerrarRegister" class="nes-btn is-error">X</button>
+        <h2 class="subtitle">Registrarse</h2>
+        <form action="/registroUsuario" id="form-registro" method="POST" class="form_index">
+            <label for="nombre_usuario">
+                <span>Nombre(s):</span>
+                <input type="text" name="nombre_usuario" id="nombre_usuario" class="nes-input" required>
+            </label>
+            <label for="apPat_usuario">
+                <span>Apellido paterno:</span>
+                <input type="text" name="apPat_usuario" id="apPat_usuario" class="nes-input" required>
+            </label>
+            <label for="apMat_usuario">
+                <span>Apellido materno:</span>
+                <input type="text" name="apMat_usuario" id="apMat_usuario" class="nes-input" required>
+            </label>
+            <div class="nes-select">
+                <label for="grado_usuario">
+                    <span>¿En que grado te encuentras?</span>
+                    <select name="grado_usuario" id="grado_usuario" required>
+                        <option value="1ro de primaria">1ro de primaria</option>
+                        <option value="2do de primaria">2do de primaria</option>
+                        <option value="3ro de primaria">3ro de primaria</option>
+                    </select>
+                </label>
+            </div>
+            <label for="email2_usuario">
+                <span>Correo electronico: </span>
+                <input type="email" name="email2_usuario" id="email2_usuario" class="nes-input" required>
+            </label>
+            <label for="password2_usuario">
+                <span>Contraseña:</span>
+                <input type="password" name="password2_usuario" id="password2_usuario" class="nes-input" required>
+            </label>
+            <button type="submit" id="submit_registro" class="nes-btn is-primary">Registrarse</button>
+        </form>
+    </div>
 
     <footer>
         <div>
@@ -129,6 +134,7 @@
         </script>
     <% } %>
 
+    <script src="../public/js/script.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
 </body>
