Se agegaron más estilos a la interfaz

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,8 +37,8 @@
                         <li><a href="/" class="nes-btn is-warning">Inicio</a></li>
                         <li><a href="/" class="nes-btn">¿Quienes somos?</a></li>
                         <li><a href="/" class="nes-btn">Contacto</a></li>
-                        <li><a href="/" class="nes-btn" id="login-btn">Iniciar Sesión</a></li>
-                        <li><a href="/" class="nes-btn" id="register-btn">Registrarse</a></li>
+                        <li><a href="/" class="nes-btn is-primary" id="login-btn">Iniciar Sesión</a></li>
+                        <li><a href="/" class="nes-btn is-success" id="register-btn">Registrarse</a></li>
                     </ul>
                 </div>
             </nav>
@@ -46,10 +46,14 @@
     </header>
 
     <main class="main_section">
-        <h1>¡Bienvenido!</h1>
-        <section>
-            <img src="../public/img/rabbit-gif.gif" alt="">
-            <p>Descubre una nueva y divertida manera de aprender matemáticas.</p>
+        <h1 class="titleh1">¡Bienvenido!</h1>
+        <section class="info-bienvenida">
+            <div class="avatar-gif">
+                <img src="../public/img/rabbit-gif.gif" alt="">
+            </div>
+            <div class="mensaje-bienvenida">
+                <p>Descubre una nueva y divertida manera de aprender matemáticas.</p>
+            </div>
         </section>
     </main>
 
