--- a/public/css/general_styles.css
+++ b/public/css/general_styles.css
@@ -6,6 +6,7 @@
     --secundarioNaranja: #FF8C42;
     --fuenteTextos: 'Press Start 2P', cursive;
     --fuenteTitulos: 'Press Start 2P', cursive;
+    --sombraTextos: 5px 5px 5px #143642;
 }
 
 * {
@@ -53,6 +54,15 @@ main.active, header.active, footer.active {
     filter: blur(4px);
 }
 
+.titleh1 {
+    text-align: center;
+    width: 100%;
+    margin: 2rem;
+    font-size: 4rem;
+    color: var(--principalAmarillo);
+    text-shadow: var(--sombraTextos);
+}
+
 .subtitle {
     font-family: var(--fuenteTitulos);
 }
@@ -78,10 +88,12 @@ span {
 
 #header-logo {
     text-decoration: none;
+    color: var(--principalAmarillo);
+    text-shadow: var(--sombraTextos);
 }
 
 #header-logo_mategotchi {
-    margin-left: 2rem;
+    margin: 1rem;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -170,6 +182,36 @@ span {
     
 }
 
+/*Estilos para el main*/
+.main_section {
+}
+
+.info-bienvenida {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    margin: auto 0;
+}
+
+.avatar-gif {
+    z-index: 1;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mensaje-bienvenida p {
+    color: var(--secundarioBlanco);
+    text-shadow: var(--sombraTextos);
+    font-size: 3rem;
+    width: 90%;
+    text-align: justify;
+    margin: 0 auto;
+}
+
 /*Estilos para los popUp*/
 .main_section {
     width: 100%;
@@ -187,7 +229,7 @@ span {
     overflow-y: scroll;
     top: 0;
     left: 50%;
-    transform: translate(-50%,-40%);
+    transform: translate(-50%,-70%);
     padding: 2em;
     border-radius: 0.5em;
     overflow-y: scroll;
@@ -201,16 +243,16 @@ span {
 }
 
 .popUp.active {
-    transform: translate(-50%,30%);
+    transform: translate(-50%,0%);
     visibility: visible;
     opacity: 1;
 }
 
 #div_registro {
-    transform: translate(-50%,-100%);
+    transform: translate(-50%,-150%);
 }
 #div_registro.active {
-    transform: translate(-50%,-70%);;
+    transform: translate(-50%,-100%);;
 }
 
 .popUp * {
